mejora visial en clientes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/rocket.svg" />
     <link href="https://unpkg.com/tabulator-tables@4.9.1/dist/css/tabulator.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ingeniería de Software</title>
+    <title>Funiture App</title>
   </head>
   <body>
     <div id="root"></div>
@@ -13,9 +13,9 @@
     <script>
       document.addEventListener('visibilitychange', function() {
           if (document.hidden) {
-              document.title = '¿Todo bien por allá? 👀';
+              document.title = 'Funiture App';
           } else {
-              document.title = 'Ingeniería de Software';
+              document.title = 'Funiture App';
           }
       });
   </script>
